fix: Fields for bin width and alignment don't accommodate numbers well (CODAP-966)
[CODAP-966](https://concord-consortium.atlassian.net/browse/CODAP-966)

--- a/v3/src/components/inspector-panel.scss
+++ b/v3/src/components/inspector-panel.scss
@@ -211,8 +211,14 @@ $inspector-panel-border-width: 2px;
         background: white;
         display: inline-block;
         font-size: 12px;
+        height: 24px;
         margin-right: 10px;
-        width: 40px;
+        max-width: 100px;
+        min-width: 36px;
+        overflow: visible;
+        padding: 4px 6px;
+        text-align: right;
+        width: 36px;
       }
     }
   }
